--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# .gitignore
+CMakeLists.txt
+*\.idea
+*\cmake-build-debug
+
 # Prerequisites
 *.d
 
@@ -6,7 +11,6 @@
 *.ko
 *.obj
 *.elf
-
 # Linker output
 *.ilk
 *.map
